--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -43,20 +43,8 @@ author:
     email: paul@redbarn.org
 
 normative:
-  RFC0791:
-  RFC1191:
-  RFC2119:
-  RFC8201:
-  RFC6891:
-  RFC8174:
-  RFC8200:
-  RFC8499:
-  RFC8899:
 
 informative:
-  RFC7739:
-  RFC8085:
-  RFC8900:
   Brandt2018: 
     title: "Domain Validation++ For MitM-Resilient PKI"
     author:
@@ -156,7 +144,7 @@ This document specifies techniques to avoid IP fragmentation in DNS.
 Introduction {#introduction}
 =====
 
-DNS has an EDNS0 [RFC6891] mechanism.
+DNS has an EDNS0 {{!RFC6891}} mechanism.
 The widely
 deployed EDNS0 feature in the DNS enables a DNS receiver to indicate
 its received UDP message size capacity which supports the sending of
@@ -168,7 +156,7 @@ Fragmented DNS UDP responses have systemic weaknesses, which expose
 the requestor to DNS cache poisoning from off-path attackers.
 (See {{ProblemOfFragmentation}} for references and details.)
 
-[RFC8900] summarized that IP fragmentation
+{{?RFC8900}} summarized that IP fragmentation
 introduces fragility to Internet communication. The transport of DNS messages
 over UDP should take account of the observations stated in that document.
 
@@ -195,22 +183,22 @@ Terminology {#terminology}
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and
 "OPTIONAL" in this document are to be interpreted as described in 
-[BCP14] [RFC2119] [RFC8174] when, and only when, they appear in all
+BCP14 {{!RFC2119}} {{!RFC8174}} when, and only when, they appear in all
 capitals, as shown here.
 
 "Requestor" refers to the side that sends a request.  "Responder"
 refers to an authoritative server, recursive resolver or other DNS component
-that responds to questions. (Quoted from EDNS0 [RFC6891])
+that responds to questions. (Quoted from EDNS0 {{!RFC6891}})
 
 "Path MTU" is the minimum link MTU of all the links in a path
-between a source node and a destination node. (Quoted from [RFC8201])
+between a source node and a destination node. (Quoted from {{!RFC8201}})
 
 In this document, the term "Path MTU discovery" includes
-both Classical Path MTU discovery [RFC1191], [RFC8201], and
-Packetization Layer Path MTU discovery [RFC8899].
+both Classical Path MTU discovery {{?RFC1191}}, {{!RFC8201}}, and
+Packetization Layer Path MTU discovery {{!RFC8899}}.
 
 Many of the specialized terms used in this document are defined in
-DNS Terminology [RFC8499].
+DNS Terminology {{!RFC8499}}.
 
 How to avoid IP fragmentation in DNS {#recommendation}
 =========
@@ -225,9 +213,9 @@ Recommendations for UDP responders {#RecommendationsResponders}
 -----------------------------------
 
 R1. UDP responders SHOULD send DNS responses
-  without "Fragment header" [RFC8200] on IPv6.
+  without "Fragment header" {{!RFC8200}} on IPv6.
 
-R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" [RFC0791] on IPv4.
+R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" {{!RFC0791}} on IPv4.
 
   At the time of writing, most DNS server software did not set the DF bit
   for IPv4,
@@ -236,7 +224,7 @@ R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" [RFC0791] on IPv4.
   so R2, which is setting the DF bit, is "MAY" rather than "SHOULD".
 
 R3. UDP responders SHOULD compose response packets that fit in the minimum of
-  the offered requestor's maximum UDP payload size [RFC6891],
+  the offered requestor's maximum UDP payload size {{!RFC6891}},
   the interface MTU,
   and the RECOMMENDED maximum DNS/UDP payload size 1400.
 
@@ -248,7 +236,7 @@ R4. If the UDP responder detects an immediate error indicating
 R5. UDP responders SHOULD limit the response size
   when UDP responders are located on small MTU (<1500) networks.
 
-  The cause and effect of the TC bit are unchanged from EDNS0 [RFC6891].
+  The cause and effect of the TC bit are unchanged from EDNS0 {{!RFC6891}}.
 
 Recommendations for UDP requestors {#RecommendationsRequestors}
 -----------------------------------
@@ -342,8 +330,8 @@ Weaknesses of IP fragmentation {#ProblemOfFragmentation}
 off-path DNS cache poisoning attack vectors using IP fragmentation.
 "IP fragmentation attack on DNS" [Hlavacek2013] and "Domain Validation++
 For MitM-Resilient PKI" [Brandt2018] proposed that off-path attackers
-can intervene in path MTU discovery [RFC1191] to perform intentionally
-fragmented responses from authoritative servers. [RFC7739] stated the
+can intervene in path MTU discovery {{!RFC1191}} to perform intentionally
+fragmented responses from authoritative servers. {{?RFC7739}} stated the
 security implications of predictable fragment identification values.
 
 DNSSEC is a countermeasure against cache poisoning attacks that use
@@ -355,7 +343,7 @@ vulnerability that can yield failed name resolutions.
 If cache poisoning attacks can be avoided,
 DNSSEC validation failures will be avoided.
 
-In Section 3.2 (Message Side Guidelines) of UDP Usage Guidelines [RFC8085]
+In Section 3.2 (Message Side Guidelines) of UDP Usage Guidelines {{?RFC8085}}
 we are told that an application SHOULD NOT send UDP datagrams
 that result in IP packets that exceed the Maximum Transmission Unit (MTU)
 along the path to the destination.
@@ -398,10 +386,10 @@ There are many discussions for
 default path MTU size and requestor's maximum UDP payload size.
 
 - The minimum MTU for an IPv6 interface is 1280 octets
-  (see Section 5 of [RFC8200]).
+  (see Section 5 of {{!RFC8200}}).
   So, we can use it as the default path MTU value for IPv6.
   The corresponding minimum MTU for an IPv4 interface is 68 (60 + 8)
-  [RFC0791].
+  {{?RFC0791}}.
 
 - Most of the Internet and especially the inner core has an MTU of at least 
   1500 octets.
@@ -410,7 +398,7 @@ default path MTU size and requestor's maximum UDP payload size.
   To allow for possible IP options and distant tunnel overhead,
   the authors' recommendation of default maximum DNS/UDP payload size is 1400.
 
-- [RFC4035] defines that "A security-aware name server MUST support
+- {{?RFC4035}} defines that "A security-aware name server MUST support
   the EDNS0 message size extension, MUST support a message
   size of at least 1220 octets". Then, the smallest number of
   the maximum DNS/UDP payload size is 1220.
@@ -420,7 +408,7 @@ default path MTU size and requestor's maximum UDP payload size.
   payload size to 1232, and the UDP responders compose UDP responses so they fit
   in 1232 octets.
   The size 1232 is based on an MTU of 1280, which is required
-  by the IPv6 specification [RFC8200],
+  by the IPv6 specification {{!RFC8200}},
   minus 48 octets for the IPv6 and UDP headers.
 
 - [Huston2021] analyzed the result of [DNSFlagDay2020] and reported that
@@ -449,7 +437,7 @@ the authority section will contain an SOA record and the answer section is empty
 Some resource records (MX, SRV, SVCB, HTTTPS) require
 additional A, AAAA, and SVCB records
 in the Additional Section
-defined in {{?RFC1035}}, {{?RFC2782}} and {{?I-D.ietf-dnsop-svcb-https}}.
+defined in {{?RFC1035}}, {{?RFC2782}} and {{?RFC9460}}.
 
 In addition, if the zone is DNSSEC signed and a query has the DNSSEC OK bit,
 signatures are added in the answer section,
