--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -132,7 +132,7 @@ The widely
 deployed EDNS0 feature in the DNS enables a DNS receiver to indicate
 its received UDP message size capacity which supports the sending of
 large UDP responses by a DNS server.
-Large DNS/UDP responses are fragmented,
+Larger DNS/UDP messages are more likely to be fragmented,
 and IP fragmentation has exposed weaknesses in application protocols.
 It is possible to avoid IP fragmentation in DNS by limiting response
 size where possible, and signaling the need to upgrade from UDP to TCP
@@ -149,14 +149,15 @@ The widely
 deployed EDNS0 feature in the DNS enables a DNS receiver to indicate
 its received UDP message size capacity which supports the sending of
 large UDP responses by a DNS server.
-DNS over UDP relies on IP fragmentation when the EDNS buffer
-size is set to a value larger than the path MTU.
+DNS over UDP relies on IP fragmentation
+when a packet is larger than the path MTU,
+which is invited by an EDNS buffer size larger than the path MTU.
 
 Fragmented DNS UDP responses have systemic weaknesses, which expose
 the requestor to DNS cache poisoning from off-path attackers.
 (See {{ProblemOfFragmentation}} for references and details.)
 
-{{?RFC8900}} summarized that IP fragmentation
+{{?RFC8900}} states that IP fragmentation
 introduces fragility to Internet communication. The transport of DNS messages
 over UDP should take account of the observations stated in that document.
 
@@ -176,8 +177,11 @@ delegation responses. But {{?RFC8945}} has limited applicability due
 to key distribution requirements and there is little if any deployment
 of {{?RFC2931}}.
 
+This document is primarily applicable to DNS use on the global Internet.
+
 This document specifies various techniques to avoid IP fragmentation
-of UDP packets in DNS.  In contrast, a path MTU that deviates from the
+of UDP packets in DNS.
+In contrast, a path MTU that deviates from the
 recommended value can be obtained through static configuration, server
 routing hints, or a future discovery protocol.  However, addressing
 this falls outside the scope of this document and may be the subject
@@ -232,15 +236,13 @@ R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" {{!RFC0791}} on IPv
 R3. UDP responders SHOULD compose response packets that fit in the minimum of
   the offered requestor's maximum UDP payload size {{!RFC6891}},
   the interface MTU,
+  the static configuration value based on network operators' knowledge,
   and the RECOMMENDED maximum DNS/UDP payload size 1400.
 
 R4. If the UDP responder detects an immediate error indicating
   that the UDP packet cannot be sent beyond the path MTU size (EMSGSIZE),
   the UDP responder MAY recreate response packets fit in path MTU size,
   or with the TC bit set.
-
-R5. UDP responders SHOULD limit the response size
-  when UDP responders are located on small MTU (<1500) networks.
 
   The cause and effect of the TC bit are unchanged from EDNS0 {{!RFC6891}}.
 
@@ -321,7 +323,7 @@ a DNS/UDP requestor behind a small-MTU network may experience
 UDP timeouts which would reduce performance
 and which may lead to TCP fallback.
 This would indicate prior reliance upon IP fragmentation,
-which is universally considered to be harmful
+which is considered to be harmful on the global Internet
 to both the performance and stability of applications, endpoints, and gateways.
 Avoiding IP fragmentation will improve operating conditions overall,
 and the performance of DNS/TCP has increased and will continue to increase.
@@ -456,7 +458,7 @@ Details are defined in {{?RFC4035}} and {{?RFC5155}}.
 Known Implementations
 ==========
 
-(This section may be removed by the RFC editor.)
+[ Editor note: RFC Editor, please remove this entire section. ]
 
 This section records the status of known implementations of these best
 practices defined by this specification at the time of publication, and any
