| The last sentence in Section 3.1, which is after R5, seems more applicable to R4 and should probably be moved up to between R4 and R5. Also, that sentence uses RFC 6891 as the reference for "the TC bit". But the TC bit has only one minor occurrence in RFC 6891. I believe RFC 1035 is the appropriate reference.
  changed as "The cause and effect of the TC bit are unchanged {{!RFC1035}}."

--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -244,7 +244,7 @@ R4. If the UDP responder detects an immediate error indicating
   the UDP responder MAY recreate response packets fit in path MTU size,
   or with the TC bit set.
 
-  The cause and effect of the TC bit are unchanged from EDNS0 {{!RFC6891}}.
+  The cause and effect of the TC bit are unchanged {{!RFC1035}}.
 
 Recommendations for UDP requestors {#RecommendationsRequestors}
 -----------------------------------
@@ -458,7 +458,7 @@ Details are defined in {{?RFC4035}} and {{?RFC5155}}.
 Known Implementations
 ==========
 
-[ Editor note: RFC Editor, please remove this entire section. ]
+Editor note: RFC Editor, please remove this entire section.
 
 This section records the status of known implementations of these best
 practices defined by this specification at the time of publication, and any
