--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -247,8 +247,8 @@ R5. UDP responders SHOULD limit the response size
 Recommendations for UDP requestors {#RecommendationsRequestors}
 -----------------------------------
 
-R6. UDP requestors SHOULD limit the requestor's maximum UDP payload size to
-  the RECOMMENDED size of 1400 or a smaller size.
+R6. UDP requestors SHOULD limit the requestor's maximum UDP payload size.
+It is RECOMMENDED to use a limit of 1400 bytes, but a smaller limit MAY be used.
 
 R7. UDP requestors SHOULD drop fragmented DNS/UDP responses without IP reassembly
   to avoid cache poisoning attacks.
