issue#10: added  "UDP requestors MUST observe [RFC8961] in setting their timeout." and changed to "SHOULD"

--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -259,6 +259,7 @@ R8. DNS responses may be dropped by IP fragmentation.
   UDP requestors MAY retry using TCP
   or UDP with a smaller EDNS requestor's maximum UDP payload size
   per local policy.
+  UDP requestors SHOULD observe {{!RFC8961}} in setting their timeout.
 
 Recommendations for zone operators and DNS server operators {#RecommendationOperators}
 =============
