--- a/draft-ietf-dnsop-avoid-fragmentation.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation.mkd
@@ -221,13 +221,12 @@ Recommendations for UDP responders {#RecommendationsResponders}
 R1. UDP responders SHOULD send DNS responses
   without "Fragment header" {{!RFC8200}} on IPv6.
 
-R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" {{!RFC0791}} on IPv4.
+R2. UDP responders SHOULD set IP "Don't Fragment flag (DF) bit" {{!RFC0791}} on IPv4.
 
-  At the time of writing, most DNS server software did not set the DF bit
-  for IPv4,
+  At the time of writing, most DNS server software did not set the DF bit for IPv4,
   and many OS kernel constraints make it difficult to set the DF bit in all cases.
-  Best Current Practice documents should not specify what is currently impossible,
-  so R2, which is setting the DF bit, is "MAY" rather than "SHOULD".
+  Best Current Practice documents should not mandate what might be impossible in
+  some circumstances so R2, which is setting the DF bit, is "SHOULD" rather than "MUST".
 
 R3. UDP responders SHOULD compose response packets that fit in the minimum of
   the offered requestor's maximum UDP payload size {{!RFC6891}},
@@ -256,7 +255,7 @@ R7. UDP requestors SHOULD drop fragmented DNS/UDP responses without IP reassembl
 R8. DNS responses may be dropped by IP fragmentation.
   Upon a timeout, 
   to avoid resolution failures,
-  UDP requestors MAY retry using TCP
+  UDP requestors SHOULD retry using TCP
   or UDP with a smaller EDNS requestor's maximum UDP payload size
   per local policy.
 
@@ -267,7 +266,7 @@ Large DNS responses are typically the result of zone configuration.
 Zone operators SHOULD seek configurations resulting in small responses.
 For example,
 
-R9. Use a smaller number of name servers (13 may be too large)
+R9. Use a smaller number of name server names (13 may be too large)
 
 R10. Use a smaller number of A/AAAA RRs for a domain name
 
@@ -277,7 +276,8 @@ R11. Use minimal-responses configuration:
   and required data ({{minimal-responses}}).
 
 R12. Use a smaller signature / public key size algorithm for DNSSEC.
- Notably, the signature sizes of ECDSA and EdDSA are smaller than those usually used for RSA.
+ Notably, the signature sizes of ECDSA and EdDSA are smaller than those of
+ equivalent cryptographic strength using RSA.
 
 Protocol compliance considerations {#protocol}
 ===========
@@ -311,7 +311,7 @@ and be vulnerable as shown in {{ProblemOfFragmentation}}.
 To avoid this, recommendation R7 SHOULD be used
 to discard the fragmented responses and retry by TCP.
 
-In the future, recommendation R2 could be changed from "MAY" to "SHOULD".
+In the future, recommendation R2 could be changed from "SHOULD" to "MUST".
 
 Small MTU network
 ---------
