--- a/draft-ietf-dnsop-avoid-fragmentation-16.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation-16.mkd
@@ -224,10 +224,9 @@ The methods to avoid IP fragmentation in DNS are described below:
 Recommendations for UDP responders {#RecommendationsResponders}
 -----------------------------------
 
-R1. UDP responders SHOULD send DNS responses
-  without "Fragment header" [RFC8200] on IPv6.
+R1. UDP responders SHOULD NOT fragment DNS responses on IPv6.
 
-R2. UDP responders MAY set IP "Don't Fragment flag (DF) bit" [RFC0791] on IPv4.
+R2. UDP responders SHOULD set IP "Don't Fragment flag (DF) bit" [RFC0791] on IPv4.
 
   At the time of writing, most DNS server software did not set the DF bit
   for IPv4,
