Update for Martin Duke timeout issue
Resolves: https://github.com/ietf-wg-dnsop/draft-ietf-dnsop-avoid-fragmentation/issues/10

--- a/draft-ietf-dnsop-avoid-fragmentation-16.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation-16.mkd
@@ -259,11 +259,10 @@ R7. UDP requestors MAY drop fragmented DNS/UDP responses without IP reassembly
   to avoid cache poisoning attacks.
 
 R8. DNS responses may be dropped by IP fragmentation.
-  Upon a timeout, 
-  to avoid resolution failures,
+  Upon a timeout, to avoid resolution failures,
   UDP requestors MAY retry using TCP
   or UDP with a smaller EDNS requestor's maximum UDP payload size
-  per local policy.
+  per local policy. UDP requestors MUST observe {{!RFC8961}} in setting their timeout.
 
 Recommendations for DNS content operators and DNS server operators {#RecommendationOperators}
 =============
