Update for Robert Wilton's DISCUSS on section 3.2
Resolves: https://github.com/ietf-wg-dnsop/draft-ietf-dnsop-avoid-fragmentation/issues/8

--- a/draft-ietf-dnsop-avoid-fragmentation-16.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation-16.mkd
@@ -255,12 +255,12 @@ Recommendations for UDP requestors {#RecommendationsRequestors}
 R6. UDP requestors SHOULD limit the requestor's maximum UDP payload size to
   the RECOMMENDED size of 1400 or a smaller size (see {{details}}).
 
-R7. UDP requestors MAY drop fragmented DNS/UDP responses without IP reassembly
+R7. UDP requestors SHOULD drop fragmented DNS/UDP responses without IP reassembly
   to avoid cache poisoning attacks.
 
 R8. DNS responses may be dropped by IP fragmentation.
   Upon a timeout, to avoid resolution failures,
-  UDP requestors MAY retry using TCP
+  UDP requestors SHOULD retry using TCP
   or UDP with a smaller EDNS requestor's maximum UDP payload size
   per local policy. UDP requestors MUST observe {{!RFC8961}} in setting their timeout.
 
