--- a/draft-ietf-dnsop-avoid-fragmentation-16.mkd
+++ b/draft-ietf-dnsop-avoid-fragmentation-16.mkd
@@ -230,7 +230,7 @@ R2. UDP responders SHOULD set IP "Don't Fragment flag (DF) bit" [RFC0791] on IPv
 
   At the time of writing, most DNS server software did not set the DF bit
   for IPv4,
-  and many OS kernel constraints make it difficult to set the DF bit in all cases.
+  and many Operating System kernel constraints make it difficult to set the DF bit in all cases.
   Best Current Practice documents should not specify what is currently impossible,
   so R2, which is setting the DF bit, is "MAY" rather than "SHOULD".
 
@@ -240,8 +240,8 @@ R3. UDP responders SHOULD compose response packets that fit in the minimum of
 
 R4. If the UDP responder detects an immediate error indicating
   that the UDP packet cannot be sent beyond the path MTU size (EMSGSIZE),
-  the UDP responder MAY recreate response packets fit in path MTU size,
-  or with the TC bit set.
+  the UDP responder MAY recreate the response packets to fit in path MTU size
+  with the TC bit set.
 
 R5. UDP responders SHOULD limit the response size
   when UDP responders are located on small MTU (<1500) networks to be
@@ -286,12 +286,12 @@ R12. Use a smaller signature / public key size algorithm for DNSSEC.
 Protocol compliance considerations {#protocol}
 ===========
 
-Prior research [Fujiwara2018]
-has shown that some authoritative servers
-ignore the EDNS0 requestor's maximum UDP payload size, and return large UDP responses.
+Some authoritative servers deviate from the DNS standard.
 
-It is also well known that some authoritative servers do not
-support TCP transport.
+[Fujiwara2018] has shown that some authoritative servers ignore the EDNS0 requestor's
+maximum UDP payload size, and return large UDP responses.
+
+It is also well known that some authoritative servers do not support TCP transport.
 
 Such non-compliant behavior cannot become implementation or configuration
 constraints for the rest of the DNS. If failure is the result, then that
